--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "react_2024",
+  "name": "positif",
+  "homepage": "https://positif.tn",
   "private": true,
   "version": "0.0.0",
   "type": "module",
